language switch added, switching static to dynamic data in progress

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,6 +4,11 @@
     padding: 40px 60px;
     align-items: flex-start;
     background-color: #F9F9F9;
+    padding-bottom: 80px;
+}
+
+.dark-mode .footer {
+    background-color: rgb(33, 33, 33);
 }
 
 .footer-title {
@@ -22,4 +27,40 @@
 .footer-left {
     color: #AF0C48;
     text-decoration: underline;
+}
+
+.footer-link-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 42px;
+}
+
+.footer-link-container-child-right {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-right-first {
+    color: #0A0A14;
+}
+
+.dark-mode .footer-right-first {
+    color: rgb(220, 220, 220);
+}
+
+.footer-right-second {
+    color: #00AB6B;
+}
+
+.dark-mode .footer-right-second {
+    color: #15fda8;
+}
+
+.footer-right-last {
+    color: #0077B5;
+}
+
+.dark-mode .footer-right-last {
+    color: #74B9FF;
 }
