--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,8 +1,9 @@
 .header {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 40px 60px;
     gap: 10px;
+    padding-top: 0;
 }
 
 .top-section {
@@ -10,6 +11,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 64px;
+    margin-bottom: 20px;
 }
 
 .bottom-section {
